--- a/_includes/layouts/mobile/intro.html
+++ b/_includes/layouts/mobile/intro.html
@@ -24,9 +24,9 @@
         <p style="font-size: 14px; font-weight: 600; margin-bottom: 0.25rem; text-transform: lowercase;">education</p>
         <p style="font-size: 18px;">
             <ul style="margin: 0; margin-bottom: 1rem; padding-left: 1.5rem; line-height: 1.5; list-style-type: square;">
-                <li style="margin-bottom: 0.5rem; font-size: 18px;">Ph.D. in Computer Science, Singapore Management University (2024-Present)</li>
+                <li style="margin-bottom: 0.5rem; font-size: 18px;">Ph.D. in Computer Science, Singapore Management University (2025-2029)</li>
                 <li style="margin-bottom: 0.5rem; font-size: 18px;">Master of Computing, National University of Singapore (2022-2023)</li>
-                <li style="margin-bottom: 0.5rem; font-size: 18px;">B.Sc. in Computing Science (First Class Honours), University of Glasgow (2018-2022)</li>
+                <li style="margin-bottom: 0.5rem; font-size: 18px;">B.Sc. in Computing Science (First Class Honours), University of Glasgow (2018-2020)</li>
             </ul>
         </p>
     </div>
