--- a/_includes/layouts/desktop/profile.html
+++ b/_includes/layouts/desktop/profile.html
@@ -13,18 +13,5 @@
             </div>
         </div>
     </div>
-    <div class="header-icons">
-        <a href="https://scholar.google.com/citations?user=wYcrORkAAAAJ&hl=en" target="_blank" title="Google Scholar" class="icon-link">
-            <img src="{{ '/assets/icons/scholar.svg' | relative_url }}" alt="Google Scholar">
-        </a>
-        <a href="https://github.com/emranpoh" target="_blank" title="GitHub" class="icon-link">
-            <i class="fab fa-github"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/emranpoh/" target="_blank" title="LinkedIn" class="icon-link">
-            <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="mailto:emranpoh@gmail.com" title="Email" class="icon-link">
-            <i class="fas fa-envelope"></i>
-        </a>
-    </div>
+    {% include components/nav-buttons.html %}
 </div> 
