--- a/_includes/components/header-icons.html
+++ b/_includes/components/header-icons.html
@@ -1,7 +1,7 @@
 <div class="nav-buttons" style="margin-left: 0; justify-content: flex-start; display: flex; gap: 1rem;">
     <span class="social-links" style="display: flex; gap: 1rem;">
         <a href="https://scholar.google.com/citations?user=wYcrORkAAAAJ&hl=en" target="_blank" title="Google Scholar" class="icon-link">
-            <img src="{{ '/assets/icons/scholar.svg' | relative_url }}" alt="Google Scholar">
+            <img src="{{ '/assets/images/scholar.svg' | relative_url }}" alt="Google Scholar">
         </a>
         <a href="https://github.com/emranpoh" target="_blank" title="GitHub" class="icon-link">
             <i class="fab fa-github"></i>
