--- a/_includes/layouts/desktop/projects.html
+++ b/_includes/layouts/desktop/projects.html
@@ -3,7 +3,7 @@
     <h2 class="section-title">Projects</h2>
     <div class="w-full mt-4 projects-grid">
       {% for project in site.data.projects %}
-        {% include project-card.html %}
+        {% include components/cards/project-card.html %}
       {% endfor %}
     </div>
     <div class="view-all-projects">
