--- a/_layouts/pages/default.html
+++ b/_layouts/pages/default.html
@@ -27,7 +27,7 @@
     <!-- <footer>
       <div class="footer-links">
         <a href="https://scholar.google.com/citations?user=wYcrORkAAAAJ&hl=en">
-          <img src="{{ '/assets/icons/scholar.svg' | relative_url }}" alt="Google Scholar icon" class="icon icon-lg">
+          <img src="{{ '/assets/images/scholar.svg' | relative_url }}" alt="Google Scholar icon" class="icon icon-lg">
         </a>
       </div>
       <div>
