--- a/_layouts/pages/publication.html
+++ b/_layouts/pages/publication.html
@@ -1,13 +1,13 @@
 ---
-layout: default
+layout: pages/default
 ---
 
 <div class="content-block">
     
-    {% include nav-pub.html %}
+    {% include partials/nav-pub.html %}
 
     <article class="publication-detail">
-        {% include pub-header.html %}
+        {% include partials/pub-header.html %}
 
         {% if page.image %}
         <div class="publication-image" style="margin: 2rem 0;">
