--- a/_includes/layouts/mobile/profile.html
+++ b/_includes/layouts/mobile/profile.html
@@ -9,7 +9,7 @@
     </div>
     <div class="nav-buttons" style="display: flex; gap: 1rem; justify-content: flex-start;">
         <a href="https://scholar.google.com/citations?user=wYcrORkAAAAJ&hl=en" target="_blank" title="Google Scholar" class="icon-link" style="background: #f1f3f5; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center; border-radius: 12px;">
-            <img src="{{ '/assets/icons/scholar.svg' | relative_url }}" alt="Google Scholar" style="width: 24px; height: 24px;">
+            <img src="{{ '/assets/images/scholar.svg' | relative_url }}" alt="Google Scholar" style="width: 24px; height: 24px;">
         </a>
         <a href="https://github.com/emranpoh" target="_blank" title="GitHub" class="icon-link" style="background: #f1f3f5; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center; border-radius: 12px;">
             <i class="fab fa-github" style="font-size: 24px;"></i>
