--- a/_layouts/pages/publication.html
+++ b/_layouts/pages/publication.html
@@ -17,6 +17,12 @@ layout: pages/default
         </div>
         {% endif %}
 
+        {% if page.abstract %}
+        <div class="publication-abstract" style="margin: 2rem 0; padding: 1.5rem; background-color: #f8f9fa; border-radius: 8px;">
+            <p style="margin: 0; line-height: 1.6; color: #4b5563;">{{ page.abstract }}</p>
+        </div>
+        {% endif %}
+
         <div class="publication-content">
             {{ content }}
         </div>
