another big push

--- a/_includes/components/header-icons.html
+++ b/_includes/components/header-icons.html
@@ -14,8 +14,9 @@
         </a>
     </span>
     <span class="page-links" style="display: flex; gap: 1rem;">
-        <a href="#" class="icon-link text-link" title="Placeholder">
-            <span>Placeholder</span>
+        <a href="/projects/xr-physical-assault" class="icon-link text-link" title="XR Physical Assault">
+            <i class="fas fa-vr-cardboard"></i>
+            <span>XR Talk</span>
         </a>
     </span>
 </div> 
