--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -586,11 +586,12 @@ mark {
 }
 
 .project-subtitle {
-  font-size: 14px !important;
-  color: #555;
-  margin: 0 0 8px 0;
-  padding: 0 8px;
+  font-size: 1.75rem;
+  color: #4b5563;
+  margin-bottom: 1rem;
   line-height: 1.4;
+  font-weight: normal;
+  padding: 0 8px;
 }
 
 .project-year {
