--- a/_includes/components/nav-buttons.html
+++ b/_includes/components/nav-buttons.html
@@ -19,6 +19,10 @@
             <i class="fas fa-file-alt"></i>
             <span>Latest Article</span>
         </a>
+        <a href="/projects/xr-physical-assault" title="How to use XR for Physical Assault" class="icon-link text-link">
+            <i class="fas fa-vr-cardboard"></i>
+            <span>How to use XR for Physical Assault</span>
+        </a>
     </span>
 </div>
 
