--- a/_includes/layouts/mobile/profile.html
+++ b/_includes/layouts/mobile/profile.html
@@ -11,6 +11,10 @@
             <i class="fas fa-file-alt" style="font-size: 1rem; margin-right: 0.5rem;"></i>
             <span>Latest Article</span>
         </a>
+        <a href="/xr-physical-assault" title="How to use XR for Physical Assault" class="icon-link text-link" style="background: #f1f3f5; width: auto; min-width: 2.25rem; height: 2.25rem; padding: 0 1rem; display: inline-flex; align-items: center; justify-content: center; border-radius: 0.5rem;">
+            <i class="fas fa-vr-cardboard" style="font-size: 1rem; margin-right: 0.5rem;"></i>
+            <span>How to use XR for Physical Assault</span>
+        </a>
     </div>
     <div class="profile-content" style="display: flex; gap: 1rem;">
         <img src="{{ '/assets/images/profile.jpg' | relative_url }}" alt="Emran Poh" class="profile-image">
