--- a/_includes/components/nav-buttons.html
+++ b/_includes/components/nav-buttons.html
@@ -15,9 +15,9 @@
         <!-- {% include components/expandable-button-group.html 
             group_name=site.data.button_groups.publications.name 
             group_items=site.data.button_groups.publications.items %} -->
-        <a href="/publications/art01" title="Latest Article" class="icon-link text-link">
+        <a href="/publications/art01" title="Pubs" class="icon-link text-link">
             <i class="fas fa-file-alt"></i>
-            <span>Latest Article</span>
+            <span>Pubs</span>
         </a>
         <a href="/projects/xr-physical-assault" title="How to use XR for Physical Assault" class="icon-link text-link">
             <i class="fas fa-vr-cardboard"></i>
